--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,18 +12,20 @@
   "dependencies": {
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
+    "@react-three/rapier": "^2.1.0",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "lenis": "^1.3.8",
     "lucide-react": "^0.535.0",
+    "meshline": "^3.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "tailwindcss": "^4.1.11",
-    "three": "^0.179.0"
+    "three": "^0.179.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
